# Project-Chimera

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  settings.txt
FbxConverter/: Animation.cpp  Animation.h  CMakeLists.txt  DataOptimizer.h  FbxParser.cpp  FbxParser.h  FolderCreator.cpp  FolderCreator.h  Makefile  MeshExporter.cpp  MeshExporter.h  README.md  run.sh
FbxConverter/scripts/: cmake-make.sh  cmake-nmake.bat
FbxConverter/shared-fbx/: Towers_with_Textures.fbx  anim_icecastle_hitbox.fbx  hitbox.fbx  icecastle2_hitbox.fbx  icecastle3_hitbox.fbx  icecastle_hitbox.fbx
FbxConverter/src/: Animation.cpp  Animation.hpp  DataOptimizer.h  DataOptimizer.hpp  FbxDirectoryProcessor.cpp  FbxDirectoryProcessor.hpp  FbxParser.cpp  FbxParser.h  FbxParser.hpp  FilesystemWrapper.hpp  FolderCreator.cpp  FolderCreator.h  Logger.cpp  Logger.hpp  MaterialProcessor.cpp  MaterialProcessor.hpp  MeshExporter.cpp  MeshExporter.h  MeshExporter.hpp  Util.cpp  Util.hpp  main.cpp
FbxConverter/src/processors/: AnimationProcessor.cpp  AnimationProcessor.hpp  MaterialProcessor.cpp  MaterialProcessor.hpp  SkeletonProcessor.cpp  SkeletonProcessor.hpp
checkpoints/: Homework3.md  (+2 more)
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Assets/DynamicCube/: VBO
src/Assets/Level/: VBO
src/Assets/Levels/Diving/Endgame/: coords hardcoded.txt
src/Assets/Levels/Towers/Endgame/: coords hardcoded.txt  endgame
src/Assets/Levels/TowersOld/Endgame/: endgame
src/Assets/Materials/CastleLevelImage/: diffuse.txt
src/Assets/Materials/CongratsScreen/: diffuse.txt  emissive.txt
src/Assets/Materials/FbxTestLevelImage/: diffuse.txt
src/Assets/Materials/LevelSelectMenuBack/: emissive.txt
src/Assets/Materials/LevelSelectMenuLast/: diffuse.txt  emissive.txt
src/Assets/Materials/LevelSelectMenuNext/: diffuse.txt  emissive.txt
src/Assets/Materials/LevelSelectMenuStart/: diffuse.txt  emissive.txt
src/Assets/Materials/LevelSelectThumbnailOverlay/: diffuse.txt
src/Assets/Materials/LoadingScreen/: diffuse.txt  emissive.txt
src/Assets/Materials/MainMenuChimeraLogo/: diffuse.txt  emissive.txt
src/Assets/Materials/MainMenuExit/: diffuse.txt
src/Assets/Materials/Missing/: diffuse.txt
src/Assets/Materials/PauseMenuMainMenu/: diffuse.txt  emissive.txt
src/Assets/Materials/PauseMenuResume/: diffuse.txt  emissive.txt
src/Assets/Materials/TowersLevelImage/: diffuse.txt
src/Assets/Player/: IBO  headIBO
src/Assets/Player_Model/JointList/0/: name
src/Assets/Player_Model/JointList/1/: name
src/Assets/Shaders/: ApplyDirectionalLightWithShadows.frag  ApplyEmissiveShading.frag  ApplyPointLight.frag  ApplyPointLight.vert  BasicDeferredShading.frag  BasicDeferredShading.vert  CartoonShading.frag  CartoonShading.vert  CreateDirectionalShadowMap.frag  CreateDirectionalVarianceShadowMap.frag  CreateTextTexture.frag  Default.frag  Default.vert  DrawDepthTex.frag  DrawQuad.frag  DrawQuad.vert  FXAA.frag  GaussianBlur.frag  GaussianBlurLinear.frag  HDRandGamma.frag  MeanBlur.frag  OverlayShading.frag  OverlayShading.vert  RenderDepth.frag  RenderDepth.vert  RenderSkinnedDepth.vert  SkinnedDeferredShading.vert  SkyboxDeferred.frag  SkyboxDeferred.vert  VolumetricLightScattering.frag
src/Engine/: Asset.cpp  Asset.hpp  Engine.cpp  Engine.hpp  FilesystemWrapper.hpp  GameObject.cpp  GameObject.hpp  GameState.cpp  GameState.hpp  InGameState.cpp  InGameState.hpp  LevelLoader.cpp  LevelLoader.hpp  LoadMenu.cpp  LoadMenu.hpp  MainMenu.cpp  MainMenu.hpp  Menu.cpp  Menu.hpp  PauseMenu.cpp  PauseMenu.hpp  PerformanceLogger.cpp  SettingsManager.cpp  SettingsManager.hpp  StandardTimer.cpp  StandardTimer.hpp  Timer.hpp  WinMenu.cpp  WinMenu.hpp  Window.cpp  Window.hpp
src/Engine/GameObjects/: Bone.cpp  Bone.hpp  Camera.cpp  Camera.hpp  ClickableButton.cpp  ClickableButton.hpp  CollisionOnlyObj.cpp  CollisionOnlyObj.hpp  DirectionalLight.cpp  DirectionalLight.hpp  DynamicCube.cpp  DynamicCube.hpp  Light.cpp  Light.hpp  MenuButton.cpp  MenuButton.hpp  MenuElement.cpp  MenuElement.hpp  MenuSlider.cpp  MenuSlider.hpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  PointLight.hpp  SceneRenderable.cpp  SceneRenderable.hpp  StaticCubeObstacle.cpp  StaticCubeObstacle.hpp  TextElement.cpp  TextElement.hpp
src/Engine/Levels/: CastleLevel.cpp  CastleLevel.hpp  FbxTestLevel.cpp  FbxTestLevel.hpp  Level.cpp  Level.hpp  LevelManager.cpp  LevelManager.hpp  TowersLevel.cpp  TowersLevel.hpp
src/Engine/States/: InGameState.cpp  InGameState.hpp  LevelSelectMenu.cpp  LevelSelectMenu.hpp  LoadMenu.cpp  LoadMenu.hpp  MainMenu.cpp  MainMenu.hpp  Menu.cpp  Menu.hpp  PauseMenu.cpp  PauseMenu.hpp  WinMenu.cpp  WinMenu.hpp
src/Engine/Systems/Animation/: AnimationCurve.cpp  AnimationCurve.hpp  AnimationFactory.cpp  AnimationFactory.hpp  AnimationLayer.cpp  AnimationLayer.hpp  AnimationStack.cpp  AnimationStack.hpp  AnimationSystem.cpp  AnimationSystem.hpp  Joint.cpp  Joint.hpp  Keyframe.cpp  Keyframe.hpp
src/Engine/Systems/Physics/: PhysicsComponent.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RigidBodyFactory.cpp  RigidBodyFactory.hpp  RigidBodyPhysicsCompnent.cpp  RigidBodyPhysicsComponent.hpp
src/Engine/Systems/PlayerMovement/: PlayerMovementSystem.cpp  PlayerMovementSystem.hpp
src/Engine/Systems/Player_Movement/: PlayerSubSystem.cpp  PlayerSubSystem.hpp
src/Engine/Systems/Rendering/: FBTexture.cpp  FBTexture.hpp  Framebuffer.cpp  Framebuffer.hpp  Material.cpp  Material.hpp  MaterialFactory.cpp  MaterialFactory.hpp  Mesh.cpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp  OverlayMesh.cpp  OverlayMesh.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderUtils.cpp  RenderUtils.hpp  Renderable.hpp  RenderingSystem.cpp  RenderingSystem.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  SkinnedMesh.cpp  SkinnedMesh.hpp  Skybox.cpp  Skybox.hpp  TEMP_Cube.cpp  TEMP_Cube.hpp  TextManager.cpp  TextManager.hpp  TextureLoader.cpp  TextureLoader.hpp
src/Engine/Utilities/: Asset.cpp  Asset.hpp  FilesystemWrapper.hpp  PerformanceLogger.cpp  PerformanceLogger.hpp  SDLWrapper.hpp  WAIWrapper.hpp
(+860 files in other folders)
